--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,21 +3,18 @@
     <head>
         <meta charset="UTF-8" />
 
-                <title>{% block title %} Welcome!  {% endblock %}</title>
+        {% block title %} Welcome!  {% endblock %}
         {% block stylesheets %}
-
-
+            <link href="{{ asset('css/materialize.css') }}" rel="stylesheet"/>
+            <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
         {% endblock %}
 
     </head>
     <body>
-        {% block body %}
-
-        {% endblock %}
+        {% block body %}{% endblock %}
         {% block javascripts %}
-
-
-
+            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+            <script type="text/javascript" src="{{ asset('js/materialize.min.js') }}"></script>
         {% endblock %}
     </body>
 </html>
