--- a/src/Star/workBundle/Resources/views/Default/index.html.twig
+++ b/src/Star/workBundle/Resources/views/Default/index.html.twig
@@ -1,94 +1,18 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-
-    <title>Home</title>
-</head>
-
-<body>
-            {#  start  navbar   #}
-            <nav class="white" >
-                <div class="container">
-                <div class="nav-wrapper ">
-                    <a href="#" class="brand-logo blue-text">Star<span style="color: black">Works</span></a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down  ">
-                        <li><a href="#" class="blue-text">Login</a></li>
-                        <li><a href="#"class="blue-text">Sign Up</a></li>
-
-                    </ul>
+{% extends 'base.html.twig' %}
+{% block body %}
+    <div class="row">
+        <div class="col s12 m6">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Card Title</span>
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</p>
                 </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
                 </div>
-            </nav>
-
-            {# end  navbar  #}
-
-
-            {#start carousel #}
-          <div class="carousel carousel-slider center" data-indicators="true">
-                <div class="carousel-fixed-item center">
-                    <a class="btn waves-effect white black-text darken-text-2">Get Started</a>
-                </div>
-                <div class="carousel-item blue white-text" href="#one!">
-                    <h2>First Image</h2>
-                    <p class="white-text">This is your first image</p>
-                </div>
-                <div class="carousel-item amber white-text" href="#two!">
-                    <h2>Second Image</h2>
-                    <p class="white-text">This is your second image</p>
-                </div>
-                <div class="carousel-item green white-text" href="#three!">
-                    <h2>Third image</h2>
-                    <p class="white-text">This is your third image</p>
-                </div>
-
             </div>
-             {#end  carousel #}
-
-            {# start section how it works #}
-        <section>
-            <div class="container">
-              <h2 class="center-align">How it works</h2>
-           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-               aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo conse
-             quat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
-          </section>
-            {# end section how it works #}
-
-            {# later  we will add others sections of course  #}
-
-            {# start footer #}
-         <footer class="page-footer white ">
-
-             <div class="container">
-                 <div class="row">
-                     <div class="col l6 s12">
-                         <h5 class="blue-text">Footer Content</h5>
-                         <p class="blue-text ">You can use rows and columns here to organize your footer content.</p>
-                     </div>
-
-                 </div>
-             </div>
-             <div class="footer-copyright">
-                 <div class="container blue-text">
-                     © 2017 Copyright StarWorks
-                     <a class="blue-text  right" href="#!">some link </a>
-                 </div>
-             </div>
-
-         </footer>
-            {# end  footer #}
-
-            {#   i include the javascripts files here   #}
-
-            <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-            <script src="{{ asset('js/index.js') }}" type="text/javascript"></script>
-</body>
-</html>
+        </div>
+    </div>
+{% endblock %}
