--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,13 +12,14 @@
     </head>
     <body>
         <nav>
-            <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Logo</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
+
+            <div class="nav-wrapper white">
+                <a href="#" class="brand-logo blue-text">Star<span style="color: black;">Works</span></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down ">
                     {% if is_granted('ROLE_USER') %}
-                        <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                        <li ><a class="blue-text" href="{{ path('fos_user_security_logout') }}">Logout</a></li>
                     {% else %}
-                        <li><a href="{{ path('fos_user_security_login') }}">Login</a></li>
+                        <li ><a class="blue-text" href="{{ path('fos_user_security_login') }}">Login</a></li>
                     {% endif %}
 
 
@@ -38,6 +39,7 @@
         {% block javascripts %}
             <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <script type="text/javascript" src="{{ asset('js/materialize.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('js/plugins.js') }}"></script>
         {% endblock %}
     </body>
 </html>
